--- a/09_drawing/src/main/res/layout/activity_main.xml
+++ b/09_drawing/src/main/res/layout/activity_main.xml
@@ -8,5 +8,11 @@
     <com.hencoder.a09_drawing.view.AvatarView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </TextView>
 
 </LinearLayout>
