--- a/20_drag_nestedscroll/src/main/res/layout/drag_to_collect.xml
+++ b/20_drag_nestedscroll/src/main/res/layout/drag_to_collect.xml
@@ -22,6 +22,13 @@
             android:layout_weight="1"
             android:src="@drawable/google_logo"
             android:contentDescription="Logo" />
+        <ImageView
+            android:id="@+id/appIcon"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="ic_launcher" />
     </LinearLayout>
 
     <LinearLayout
