--- a/10_text_and_transformation/src/main/res/layout/activity_main.xml
+++ b/10_text_and_transformation/src/main/res/layout/activity_main.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <com.hencoder.a10_text_and_transformation.view.CameraView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <com.hencoder.a10_text_and_transformation.view.SportView
+            android:layout_width="match_parent"
+            android:layout_height="500dp">
+
+        </com.hencoder.a10_text_and_transformation.view.SportView>
+        <com.hencoder.a10_text_and_transformation.view.CenterTextView
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="500dp">
+
+        </com.hencoder.a10_text_and_transformation.view.CenterTextView>
+        <com.hencoder.a10_text_and_transformation.view.CameraView
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
+
+    </LinearLayout>
+</ScrollView>
