--- a/09_drawing/src/main/res/layout/activity_main.xml
+++ b/09_drawing/src/main/res/layout/activity_main.xml
@@ -1,12 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <com.hencoder.a09_drawing.view.AvatarView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <com.hencoder.a09_drawing.view.PaintView
+            android:layout_width="800dp"
+            android:layout_height="800dp" />
+
+        <com.hencoder.a09_drawing.view.TestView
+            style="@style/Widget.AppTheme.MyView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="40dp"
+            app:exampleDimension="24sp"
+            app:exampleDrawable="@android:drawable/ic_menu_add"
+            app:exampleString="Hello, TestView" />
+
+        <com.hencoder.a09_drawing.view.DashBoard
+            android:layout_width="match_parent"
+            android:layout_height="1000dp">
+
+        </com.hencoder.a09_drawing.view.DashBoard>
+        <com.hencoder.a09_drawing.view.PieChart
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
+
+        </com.hencoder.a09_drawing.view.PieChart>
+
+    </LinearLayout>
+</ScrollView>
