--- a/12_bitmap_drawable/src/main/res/layout/activity_main.xml
+++ b/12_bitmap_drawable/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
     </FrameLayout>
 
     <com.hencoder.a12_bitmap_drawable.view.DrawableViewCustom
+        android:id="@+id/drawable"
         android:layout_width="match_parent"
         android:layout_height="300dp">
 
